syntax = "proto3";

package kasusastran;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "github.com/fikrirnurhidayat/kasusastran/proto";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Authentication";
    version: "1.0";
    contact: {
      name: "Fikri Rahmat Nurhidayat";
      url: "https://github.com/fikrirnurhidayat";
      email: "fikrirnurhidayat@gmail.com";
    };
  };
};

service Authentication {
  rpc Register(RegisterRequest) returns (Session) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "Register"
      summary: "Register"
      description: "Create new user for Kasusastran API"
      tags: "Authentication"
    };
  }

  rpc Login(LoginRequest) returns (Session) {
    option (google.api.http) = {
      post: "/v1/sessions"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "Login"
      summary: "Login"
      description: "Retrieve an access to Kasusastran API"
      tags: "Authentication"
    };
  }
}

// Request

message RegisterRequest {
  string name = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Your name"
    },
    (validate.rules).string.min_len = 3,
    (validate.rules).string.max_len = 255,
    (validate.rules).string.ignore_empty = false
  ];

  string email = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Your email"
    },
    (validate.rules).string.email = true,
    (validate.rules).string.ignore_empty = false
  ];

  string password = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Your password"
    },
    (validate.rules).string.min_len = 6,
    (validate.rules).string.max_len = 255,
    (validate.rules).string.ignore_empty = false
  ];
}

message LoginRequest {
  string email = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Your email"
    },
    (validate.rules).string.email = true,
    (validate.rules).string.ignore_empty = false
  ];

  string password = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Your password"
    },
    (validate.rules).string.min_len = 6,
    (validate.rules).string.max_len = 255,
    (validate.rules).string.ignore_empty = false
  ];
}

// Model

message Session {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expired_at = 3;
}
